# CarRental

CarService/: .env.example  .flake8  Makefile  alembic.ini  dist.env  docker-compose.yml  pyproject.toml
CarService/app/: config.py  enums.py  main.py
CarService/app/api/: routes.py  schemas.py  services.py
CarService/app/car_app/: repository.py  schemas.py
CarService/app/core/: config.py  database.py  enums.py  exceptions.py
CarService/app/database/: dao.py  db.py  models.py
CarService/app/models/: cars.py
CarService/app/storage/: exception_handler.py  s3.py
CarService/migrations/: env.py
CarService/migrations/versions/: 026f789af3eb_create_models.py  1e36e3bb008a_create_table.py  48650faf4d2b_create_models.py  7742258a359a_create_table.py  eb713b7033ef_create_tabels.py
OrderService/: dist.env  docker-compose.yml  pyproject.toml
OrderService/app/: main.py
OrderService/app/api/: routes.py  schemas.py  services.py
OrderService/app/core/: config.py  database.py  enums.py  exceptions.py
OrderService/app/internal_gateway/: cars.py  exception_handler.py
OrderService/app/models/: orders.py
OrderService/app/order_app/: repository.py
UserService/: dist.env  docker-compose.yml  pyproject.toml
UserService/app/: main.py  models.yaml
UserService/app/api/: config.py  email_texts.py  mailer.py
UserService/app/api/routers/: auth.py  mail.py  registration.py  user.py
UserService/app/api/schemas/: auth.py  tables.py  users.py
UserService/app/api/services/: auth.py  current_user.py  mail.py  password.py  users.py
UserService/app/core/: config.py  database.py  exceptions.py
UserService/app/storage/: async_runner.py  dynamodb.py
