[tool.poetry]
name = "carservice"
version = "0.1.0"
description = ""
authors = ["Svitlana Sumets <svetasumets@gmail.com>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
flake8-import-order = "^0.18.2"
flake8-print = "^5.0.0"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.2"
pydantic = "^2.6.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.7"
fastapi = "^0.110.0"
sqlalchemy = "2.0.27"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.9"
itsdangerous = "^2.1.2"
aioboto3 = "^12.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
