[tool.poetry]
name = "orderservice"
version = "0.1.0"
description = ""
authors = ["sumets <svetasumets@gmail.com>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
ruff = "^0.2.2"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
bcrypt = "^4.1.2"
fastapi-jwt = "^0.2.0"
fastapi-mail = "^1.4.1"
boto3 = "^1.34.52"
mypy-boto3-dynamodb = "^1.34.46"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "migrations/"]
lint.select = [
  "E", # Errors
  "F", # Pyflakes
  "I", # isort
  "T20", # flake8-print
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
case-sensitive = false
detect-same-package = true
order-by-type = false
known-local-folder = ["tests", "app"]
